--- a/other/lhs.css
+++ b/other/lhs.css
@@ -85,7 +85,7 @@ body {
   max-width: 980px;
   margin: 0 auto;
   padding: 45px;
-  background-image: url("other/grid_@2X.png");
+  background-image: url("grid_@2X.png");
 }
 
 strong {
