--- a/other/lhs.css
+++ b/other/lhs.css
@@ -1,13 +1,13 @@
 body {
-    background-color: #f6f6f6;
+    background-color: #f9f9f8;
     color: #141414;
-    font-family: "Avenir", "Helvetica Neue", Helvetica, "Segoe UI", Arial, freesans, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-family: "Avenir", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 16px;
     line-height: 1.6;
     word-wrap: break-word;
     box-sizing: border-box;
     min-width: 200px;
-    max-width: 980px;
+    max-width: 600px;
     margin: 0 auto;
     padding: 45px; }
 body strong {
